force-app/main/default/objects/SBQQ__QuoteLine__c/fields/controlled_field__c.field-meta.xml
<CustomField>
    <fullName>controlled_field__c</fullName>
    <label>controlled field</label>
    <type>Date</type>
</CustomField>