force-app/main/default/objects/SBQQ__QuoteLine__c/fields/controlling_field__c.field-meta.xml
<CustomField>
    <fullName>controlling_field__c</fullName>
    <label>controlling field</label>
    <type>Date</type>
</CustomField>