force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Country_Factor__c.field-meta.xml
<CustomField>
    <fullName>Country_Factor__c</fullName>
    <label>Country Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>