force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Esforco_Total__c.field-meta.xml
<CustomField>
    <fullName>Esforco_Total__c</fullName>
    <description>Total de HH</description>
    <label>Esforço Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>