force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Horas_do_Recurso__c.field-meta.xml
<CustomField>
    <fullName>Horas_do_Recurso__c</fullName>
    <description>Horas Calculadas para cada recurso empregado</description>
    <label>Horas do Recurso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>