force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lead_x_quantity__c.field-meta.xml
<CustomField>
    <fullName>Lead_x_quantity__c</fullName>
    <formula>SBQQ__ProductOption__r.SBQQ__Quantity__c *  SBQQ__ProductOption__r.Lead_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead-x-quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>