force-app/main/default/objects/SBQQ__QuoteLine__c/fields/mlfb__c.field-meta.xml
<CustomField>
    <fullName>mlfb__c</fullName>
    <label>mlfb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>