force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Percentual_de_HH__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_HH__c</fullName>
    <description>Twin Field de Product Option, para poder compor o Mix de 100%</description>
    <label>Percentual de HH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>