force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Lines (Quote Line)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>