force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Group</label>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Quote Lines (Quote Line Group)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>