force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ListTotal__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ListTotal__c</fullName>
    <description>List total price for this quote line item.</description>
    <formula>IF(OR(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, !SBQQ__CarryoverLine__c, ISBLANK(SBQQ__PriorQuantity__c)),SBQQ__Bundled__c),0,CASE(SBQQ__PricingMethod__c,&apos;Block&apos;,SBQQ__ProratedListPrice__c * SBQQ__EffectiveQuantity__c,SBQQ__ProratedListPrice__c * IF(OR(SBQQ__Existing__c, SBQQ__CarryoverLine__c),SBQQ__Quantity__c - BLANKVALUE(SBQQ__PriorQuantity__c, 0) + BLANKVALUE(SBQQ__UpgradedQuantity__c, 0),SBQQ__Quantity__c)))</formula>
    <inlineHelpText>List total price for this quote line item.</inlineHelpText>
    <label>List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>