force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Segments__c.field-meta.xml
<CustomField>
    <fullName>Segments__c</fullName>
    <label>Segments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>CB1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>