force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Taxes_Rules__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Rules__c</fullName>
    <label>Taxes Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax rule A</fullName>
            </value>
            <value>
                <fullName>Tax rule B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>