force-app/main/default/objects/SBQQ__QuoteLine__c/fields/td__c.field-meta.xml
<CustomField>
    <fullName>td__c</fullName>
    <formula>IF( SBQQ__RequiredBy__c &lt;&gt; NULL, MAX( SBQQ__RequiredBy__r.Lead_Time__c,  Lead_Time__c ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>td</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>