force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Teste_corrente_curto.validationRule-meta.xml
<ValidationRule>
    <fullName>Teste_corrente_curto</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(TRIM(LEFT(TEXT(Corrente_Curto_Circuito__c),FIND(&quot; &quot;,TEXT(Corrente_Curto_Circuito__c))))) &gt;  VALUE(TRIM(LEFT(TEXT(SBQQ__Product__r.Corrente_Curto_Circuito__c),FIND(&quot; &quot;,TEXT(SBQQ__Product__r.Corrente_Curto_Circuito__c)))))</errorConditionFormula>
    <errorMessage>Selecione apenas valores iguais ou menores de corrente de curto circuito</errorMessage>
</ValidationRule>